Turn on autocommit for this lab

--- a/container-volumes/mysql/etc-mysql/my.cnf
+++ b/container-volumes/mysql/etc-mysql/my.cnf
@@ -14,7 +14,7 @@ tmpdir          = /tmp
 skip-external-locking
 
 # Turn off autocommit
-autocommit      = OFF
+autocommit      = ON
 
 # Set transaction isolation level
 transaction-isolation      = SERIALIZABLE
