--- a/Docker-Compose.yaml
+++ b/Docker-Compose.yaml
@@ -2,8 +2,8 @@ services:
 
   mysql:
     image: mysql:8.3.0
-    hostname: mysql-8.3.0-bbt3104
-    container_name: mysql-8.3.0-bbt3104
+    hostname: mysql-8.3.0-bbt3104-lab2
+    container_name: mysql-8.3.0-bbt3104-lab2
     restart: always
     ports:
       - 3307:3306
@@ -24,8 +24,8 @@ services:
   
   phpmyadmin:
     image: phpmyadmin:5.2.1
-    hostname: phpmyadmin-5.2.1-bbt3104
-    container_name: phpmyadmin-5.2.1-bbt3104
+    hostname: phpmyadmin-5.2.1-bbt3104-lab2
+    container_name: phpmyadmin-5.2.1-bbt3104-lab2
     restart: always
     ports:
       - 8080:80
