--- a/container-volumes/mysql/etc-mysql/my.cnf
+++ b/container-volumes/mysql/etc-mysql/my.cnf
@@ -13,7 +13,7 @@ datadir         = /var/lib/mysql
 tmpdir          = /tmp
 skip-external-locking
 
-# Turn off autocommit
+# Turn on autocommit
 autocommit      = ON
 
 # Set transaction isolation level
